set up AJAX call to trivia API and displayQuestion function, additional styling added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,13 @@ body{
 	margin: 10px;
 }
 
+.button:hover {
+	border-color: white;
+	background-color: black;
+	color: white;
+	cursor: pointer;
+}
+
 .row::after {
     content: "";
     clear: both;
